namespace HogwartsHouses.Models.Types
{
    public enum HouseType : byte
    {
        Gryffindor,
        Hufflepuff,
        Ravenclaw,
        Slytherin
    }
}