namespace HogwartsHouses.Models.Types
{
    public enum PetType : byte
    {
        None,
        Cat,
        Rat,
        Owl
    }
}